# cpp-chess

./: CMakeLists.txt
include/: frame.h
src/: frame.cpp  main.cpp
